<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_centerVertical="true"
    android:background="@drawable/background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/createAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/oswald"
        android:text="@string/createAccount"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="30sp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:id="@+id/name"
        android:textSize="14sp"
        android:hint="@string/name"
        android:paddingLeft="20dp"
        android:textColor="#fff"
        android:inputType="textPersonName"
        android:textColorHint="#fff"
        android:fontFamily="@font/oswald"
        android:background="@drawable/edittext"
        android:focusable="true"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:focusable="true"
        android:textColor="#fff"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:id="@+id/rollNum"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:hint="@string/roll"
        android:textColorHint="#fff"
        android:fontFamily="@font/oswald"
        android:background="@drawable/edittext"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="#fff"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:focusable="true"
        android:paddingLeft="20dp"
        android:id="@+id/passwd"
        android:hint="@string/passwd"
        android:textColorHint="#fff"
        android:fontFamily="@font/oswald"
        android:background="@drawable/edittext"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:focusable="true"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:paddingLeft="20dp"
        android:id="@+id/email"
        android:hint="@string/Email2"
        android:inputType="textEmailAddress"
        android:textColorHint="#fff"
        android:fontFamily="@font/oswald"
        android:textColor="#fff"
        android:background="@drawable/edittext"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spins">
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <Spinner
             android:id="@+id/branch"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="228dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/edittext"
             />
         <ImageButton
             android:layout_width="15dp"
             android:layout_height="15dp"
             android:layout_alignBottom="@+id/branch"
             android:layout_alignRight="@+id/branch"
             android:layout_margin="12dp"
             android:src="@mipmap/drop"/>
     </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Spinner
                android:layout_width="115dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="27dp"
                android:layout_marginTop="19dp"
                android:id="@+id/group"
                android:background="@drawable/edittext"/>
            <ImageButton
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignBottom="@+id/group"
                android:layout_alignRight="@+id/group"
                android:layout_margin="12dp"
                android:src="@mipmap/drop"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/sem"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginLeft="135dp"
                android:layout_marginTop="19dp"
                android:background="@drawable/edittext" />
            <ImageButton
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignBottom="@+id/sem"
                android:layout_alignRight="@+id/sem"
                android:layout_margin="12dp"
                android:src="@mipmap/drop"/>
        </RelativeLayout>
    </RelativeLayout>
        <Button
            android:id="@+id/register"
            android:layout_width="120dp"
            android:layout_height="42dp"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="120dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:fontFamily="@font/oswald"
            android:text="@string/reg"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="14sp" />
    <CheckBox
        android:id="@+id/ctvReg"
        style="@android:style/Widget.Holo.Light.CompoundButton.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register"
        android:layout_marginLeft="122dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="40dp"
        android:checked="false"
        android:textSize="14sp"
        android:fontFamily="@font/oswald"
        android:text="Register as CR"
        android:textColor="#fff" />
</LinearLayout>